# flask-api-demo

./: .coveragerc  .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  README.txt  conftest.py  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_prod.txt  swagger.yml
.github/workflows/: pythonapp.yml
docs/: CHALLENGE_REQS_AND_ASSUMPTIONS.md  README.txt
src/: app.py  models.py  request_utils.py  settings.py  sizing_tools.py
tests/: test_app.py  test_request_utils.py  test_sizing_tools.py
