[tool.poetry]
name = "api_demo"
version = "0.1.0"
description = "Proof of concept app to determine the appropriate Vehicle type to fit all items in a given item list."
authors = ["Nathaniel Compton <nathanielcompton@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
